--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<td><a class="nav-item smoothscroll" href="#dates">IMPORTANT DATES</a></td>
 		<td><a class="nav-item smoothscroll" href="#team">TEAM</a></td>
 	  <td><a class="nav-item smoothscroll" href="#schedule">SCHEDULE</a></td>
-		<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR MENTORS</td>
+		<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR TEACHERS</td>
 		<td><a class="nav-item smoothscroll" href="#contact">CONTACT</a></td>
 		<td><a class="nav-item" href="https://goo.gl/b1TKhd" target="_blank">REGISTER</a></td>
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
