--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
   <div class="tbox"  style="padding-top: 1px"> <span class = "designation" style="font-family: 'Raleway';font-weight: 400">  Vice-President</span><br><br>
 	<a href="https://www.instagram.com/tushu0___0/" target="_blank">
 	<img src="images/memb/tushar.jpeg" class="memb"><div class="mem">
-<div class = "mem-name">tusharnaruto007@gmail.com
-</div></div></a><span class = "mem-name-end">Tushar Chopra</span><br><span class="mem-evnt">C1ue5</span></div>
+<div class = "mem-name">yadav.atharva99@gmail.com
+</div></div></a><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">C1ue5</span></div>
 
 <div class="tbox" style="padding-top: 1px"> <span class = "designation" style="font-family: 'Raleway';font-weight: 350"> Deputy VP</span><br><br>
-	<a href="https://www.instagram.com/akshatsaxena01/" target="_blank"><img src="images/memb/akshat.jpg" class="memb"><div class="mem">
-<div class = "mem-name">akshatsax001@outlook.com</div></div></a><span class = "mem-name-end">Aviral Gupta</span><br><span class="mem-evnt">C1ue5</span></div>
+	<a href="https://www.instagram.com/akshatsaxena01/" target="_blank"><img src="images/2021/membs/hardik.jpg" class="memb"><div class="mem">
+<div class = "mem-name">hardikkohli7@gmail.com</div></div></a><span class = "mem-name-end">Hardik Kohli</span><br><span class="mem-evnt">Opus</span></div>
   </div>
   <br><br>
   <h1 style="font-family: 'Raleway';font-weight: 800;font-size: 28px;padding-top: 30px;padding-bottom: 30px;background:-webkit-linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);
@@ -252,16 +252,51 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 	<div class="teambox">
 		<a href="https://www.youtube.com/thetword" target="_blank">
-		<div class="tbox"><img src="images/memb/vidun.JPG" class="memb"><div class="mem">
-		<div class = "mem-name">saansharora3@gmail.com</div></div></a><span class = "mem-name-end">Vidunram AR</span><br><span class="mem-evnt">Logic Gate</span></div>
-		<div class="tbox"><img src="images/memb/sashreek.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">yadav.atharva99@gmail.com</div></div><span class = "mem-name-end">Sashreek Das</span><br><span class="mem-evnt">Clic(k)he</span></div>
-		<div class="tbox"><img src="images/memb/atharva.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">araghav2003@gmail.com</div></div><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">Blitzkrieg</span></div>
-		<div class="tbox"><img src="images/memb/suvidha.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">jaimehtani26@gmail.com</div></div><span class = "mem-name-end">Suvidha Srivastava</span><br><span class="mem-evnt">Pla(y)gue</span></div>
-		<div class="tbox"><img src="images/memb/.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">abkumar5411@gmail.com</div></div><span class = "mem-name-end"></span><br><span class="mem-evnt">BlitzKrieg</span></div>
+		<div class="tbox"><img src="images/2021/membs/vikas.jpeg.JPG" class="memb"><div class="mem">
+		<div class = "mem-name">vikasgoudar@gmail.com/div></div></a><span class = "mem-name-end">Vikas Goudar</span><br><span class="mem-evnt">Logic Gate</span></div>
+		<div class="tbox"><img src="images/2021/membs/vikas.jpeg.JPG" class="memb"><div class="mem">
+		<div class = "mem-name">vikasgoudar@gmail.com/div></div></a><span class = "mem-name-end">Riya Malhotra</span><br><span class="mem-evnt">Logic Gate</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Anuvrat Arya</span><br><span class="mem-evnt">Clic(k)he</span></div>
+		<div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">Clic(k)he</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/vaibhavy.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">vaibhavydarshan08@gmail.com</div></div><span class = "mem-name-end">Vaibhavy Darshan</span><br><span class="mem-evnt">Chalchitra</span></div>
+		<div class="tbox"><img src="images/2021/membs/akanksha.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">akanksha.kumari2405@gmail.com</div></div><span class = "mem-name-end">Akanksha Kumari</span><br><span class="mem-evnt">Chalchitra</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Siddharth Kishore</span><br><span class="mem-evnt">Buzzer</span></div>
+		<div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Mihir Kumar</span><br><span class="mem-evnt">Trial by Combat</span></div>
+		<div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Harshit Grover</span><br><span class="mem-evnt">Trial by Combat</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Aryan Jain</span><br><span class="mem-evnt">Leviosway</span></div>
+		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Akshat Grover</span><br><span class="mem-evnt">Leviosway</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">manchitrachit2017@gmail.com</div></div><span class = "mem-name-end">Manchit Vaid</span><br><span class="mem-evnt">Fun-O-Tastic</span></div>
+		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Harsh Trivedi</span><br><span class="mem-evnt">Fun-O-Tastic</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/yesha.png" class="memb"><div class="mem">
+		<div class = "mem-name">yeshasikka240@gmail.com</div></div><span class = "mem-name-end">Yesha Sikka</span><br><span class="mem-evnt">Masquerades</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div>
+		<div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">E-Brochure</span></div>
+
+		<div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div>
 	
 
 	
