--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
      	
          <span class = "designation" style="color;font-family: 'Raleway';font-weight: 400">President</span><br><br>
          <a href="https://www.instagram.com/sa.rtha.k/" target="_blank">
-         <img src="images/memb/sarthak.jpg" class="memb"><div class="mem">
+         <img src="images/memb/aviral.jpg" class="memb"><div class="mem">
      <div class = "mem-name">aviralgupta010704@gmail.com</div></div></a><span class = "mem-name-end">Aviral Gupta</span><br><span class="mem-evnt">C1UE5</span></div>
 
    
