--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
      	
          <span class = "designation" style="color;font-family: 'Raleway';font-weight: 400">President</span><br><br>
          <a href="https://www.instagram.com/sa.rtha.k/" target="_blank">
-         <img src="images/memb/aviral.png" class="memb"><div class="mem">
+         <img src="images/2021/membs/AVIRAL2.jpg" class="memb"><div class="mem">
      <div class = "mem-name">aviralgupta010704@gmail.com</div></div></a><span class = "mem-name-end">Aviral Gupta</span><br><span class="mem-evnt">C1UE5</span></div>
 
    
@@ -235,7 +235,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
   <div class="tbox"  style="padding-top: 1px"> <span class = "designation" style="font-family: 'Raleway';font-weight: 400">  Vice-President</span><br><br>
 	<a href="https://www.instagram.com/tushu0___0/" target="_blank">
-	<img src="images/memb/atharva.png" class="memb"><div class="mem">
+	<img src="images/2021/membs/ATHARVA2.jpg" class="memb"><div class="mem">
 <div class = "mem-name">yadav.atharva99@gmail.com
 </div></div></a><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">C1ue5</span></div>
 
@@ -254,7 +254,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<a href="https://www.youtube.com/thetword" target="_blank">
 		<div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
 		<div class = "mem-name">vikasgoudar@gmail.com/div></div></a><span class = "mem-name-end">Vikas Goudar</span><br><span class="mem-evnt">Logic Gate</span></div>
-		<div class="tbox"><img src="images/2021/membs/vikas.png.JPG" class="memb"><div class="mem">
+		<div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
 		<div class = "mem-name">vikasgoudar@gmail.com/div></div></a><span class = "mem-name-end">Riya Malhotra</span><br><span class="mem-evnt">Logic Gate</span></div>
 
 		<div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
