--- a/index.html
+++ b/index.html
@@ -250,53 +250,58 @@ background:-moz-linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);
 background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color: white">Directorial Board</h1>
 <br><br>
 
-	<div class="teambox">
+	<div class="teambox" align = 'center'>
+		<table id = "memberss">
+
 		<a href="https://www.youtube.com/thetword" target="_blank">
-		<div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
-		<div class = "mem-name">vikasgoudar@gmail.com/div></div></a><span class = "mem-name-end">Vikas Goudar</span><br><span class="mem-evnt">Logic Gate</span></div>
-		<div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
-		<div class = "mem-name">vikasgoudar@gmail.com/div></div></a><span class = "mem-name-end">Riya Malhotra</span><br><span class="mem-evnt">Logic Gate</span></div>
+		<tr>
+		<td><div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
+		<div class = "mem-name">vikasgoudar@gmail.com</div></div></a><span class = "mem-name-end">Vikas Goudar</span><br><span class="mem-evnt">Logic Gate</span></div></div></td>
+		<td><div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
+		<div class = "mem-name">vikasgoudar@gmail.com</div></div></a><span class = "mem-name-end">Riya Malhotra</span><br><span class="mem-evnt">Logic Gate</span></div></td>
 
-		<div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Anuvrat Arya</span><br><span class="mem-evnt">Clic(k)he</span></div>
-		<div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">Clic(k)he</span></div>
+		<td><div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Anuvrat Arya</span><br><span class="mem-evnt">Clic(k)he</span></div></td></tr>
+		<tr><td><div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">Clic(k)he</span></td>
 
-		<div class="tbox"><img src="images/2021/membs/vaibhavy.png" class="memb"><div class="mem">
-		<div class = "mem-name">vaibhavydarshan08@gmail.com</div></div><span class = "mem-name-end">Vaibhavy Darshan</span><br><span class="mem-evnt">Chalchitra</span></div>
-		<div class="tbox"><img src="images/2021/membs/akanksha.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">akanksha.kumari2405@gmail.com</div></div><span class = "mem-name-end">Akanksha Kumari</span><br><span class="mem-evnt">Chalchitra</span></div>
+		<td><div class="tbox"><img src="images/2021/membs/vaibhavy.png" class="memb"><div class="mem">
+		<div class = "mem-name">vaibhavydarshan08@gmail.com</div></div><span class = "mem-name-end">Vaibhavy Darshan</span><br><span class="mem-evnt">Chalchitra</span></div></td>
+		<td><div class="tbox"><img src="images/2021/membs/akanksha.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">akanksha.kumari2405@gmail.com</div></div><span class = "mem-name-end">Akanksha Kumari</span><br><span class="mem-evnt">Chalchitra</span></div></td></tr>
 
-		<div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Siddharth Kishore</span><br><span class="mem-evnt">Buzzer</span></div>
-		<div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer</span></div>
+		<tr><td><div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Siddharth Kishore</span><br><span class="mem-evnt">Buzzer</span></div></td>
+		<td><div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer</span></div></td>
 
-		<div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Mihir Kumar</span><br><span class="mem-evnt">Trial by Combat</span></div>
-		<div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Harshit Grover</span><br><span class="mem-evnt">Trial by Combat</span></div>
+		<td><div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Mihir Kumar</span><br><span class="mem-evnt">Trial by Combat</span></div></td></tr>
+		<tr><td><div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Harshit Grover</span><br><span class="mem-evnt">Trial by Combat</span></div></td>
 
-		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Aryan Jain</span><br><span class="mem-evnt">Leviosway</span></div>
-		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Akshat Grover</span><br><span class="mem-evnt">Leviosway</span></div>
+		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Aryan Jain</span><br><span class="mem-evnt">Leviosway</span></div></td>
+		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Akshat Grover</span><br><span class="mem-evnt">Leviosway</span></div></td></tr>
 
-		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">manchitrachit2017@gmail.com</div></div><span class = "mem-name-end">Manchit Vaid</span><br><span class="mem-evnt">Fun-O-Tastic</span></div>
-		<div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Harsh Trivedi</span><br><span class="mem-evnt">Fun-O-Tastic</span></div>
+		<tr><td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">manchitrachit2017@gmail.com</div></div><span class = "mem-name-end">Manchit Vaid</span><br><span class="mem-evnt">Fun-O-Tastic</span></div></td>
+		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Harsh Trivedi</span><br><span class="mem-evnt">Fun-O-Tastic</span></div></td>
 
-		<div class="tbox"><img src="images/2021/membs/yesha.png" class="memb"><div class="mem">
-		<div class = "mem-name">yeshasikka240@gmail.com</div></div><span class = "mem-name-end">Yesha Sikka</span><br><span class="mem-evnt">Masquerades</span></div>
+		<td><div class="tbox"><img src="images/2021/membs/yesha.png" class="memb"><div class="mem">
+		<div class = "mem-name">yeshasikka240@gmail.com</div></div><span class = "mem-name-end">Yesha Sikka</span><br><span class="mem-evnt">Masquerades</span></div></td></tr>
 
-		<div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
-		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div>
-		<div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">E-Brochure</span></div>
+		<tr><td><div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div></td>
+		<td><div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">E-Brochure</span></div></td>
 
-		<div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div>
+		<td><div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div></td></tr>
+
+	</table>
 	
 
 	
@@ -306,10 +311,10 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 </div>
 
- <div class="schedule" id = "schedule" align="center">
+ <!--<div class="schedule" id = "schedule" align="center">
 	<p class="heading-sch">Our Schedule</p>
 	<img src="images/finale.png" class="sch-img">
-</div>
+</div>-->
 
 
 <div class="footer" id="contact">
