--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 		<td><div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Mihir Kumar</span><br><span class="mem-evnt">Trial by Combat</span></div></td></tr>
-		<tr><td><div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Harshit Grover</span><br><span class="mem-evnt">Trial by Combat</span></div></td>
+		<tr><td><div class="tbox"><img src="images/2021/membs/harshit.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">harshitgrover007@gmail.com</div></div><span class = "mem-name-end">Harshit Grover</span><br><span class="mem-evnt">Trial by Combat</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Aryan Jain</span><br><span class="mem-evnt">Leviosway</span></div></td>
@@ -298,8 +298,8 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<td><div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">E-Brochure</span></div></td>
 
-		<td><div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div></td></tr>
+		<td><div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
+		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div></td></tr>
 
 	</table>
 	
