--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
      <div class="tbox" style="padding-top: 20px">
      	
          <span class = "designation" style="color;font-family: 'Raleway';font-weight: 400">President</span><br><br>
-         <a href="https://www.instagram.com/sa.rtha.k/" target="_blank">
+         <a href="https://www.instagram.com/aviral_0107/" target="_blank">
          <img src="images/2021/membs/AVIRAL2.jpg" class="memb"><div class="mem">
      <div class = "mem-name">aviralgupta010704@gmail.com</div></div></a><span class = "mem-name-end">Aviral Gupta</span><br><span class="mem-evnt">C1UE5</span></div>
 
@@ -234,13 +234,13 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
   <div class="teambox" >
 
   <div class="tbox"  style="padding-top: 1px"> <span class = "designation" style="font-family: 'Raleway';font-weight: 400">  Vice-President</span><br><br>
-	<a href="https://www.instagram.com/tushu0___0/" target="_blank">
+	<a href="https://www.instagram.com/_atharva_yadav/" target="_blank">
 	<img src="images/2021/membs/ATHARVA2.jpg" class="memb"><div class="mem">
 <div class = "mem-name">yadav.atharva99@gmail.com
 </div></div></a><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">C1ue5</span></div>
 
 <div class="tbox" style="padding-top: 1px"> <span class = "designation" style="font-family: 'Raleway';font-weight: 350"> Deputy VP</span><br><br>
-	<a href="https://www.instagram.com/akshatsaxena01/" target="_blank"><img src="images/2021/membs/hardik.jpg" class="memb"><div class="mem">
+	<a href="https://www.instagram.com/officialkidrah/" target="_blank"><img src="images/2021/membs/hardik.jpg" class="memb"><div class="mem">
 <div class = "mem-name">hardikkohli7@gmail.com</div></div></a><span class = "mem-name-end">Hardik Kohli</span><br><span class="mem-evnt">Opus</span></div>
   </div>
   <br><br>
