--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</div>
 				<!--modal closes-->
 			</div>
-			<div class="box" id="hv-2"><img src="images/event-logos/buzzer.jpg" class="logo"><div class="hov-con"><div class="text">Paint 3D</div></div>
+			<div class="box" id="hv-2"><img src="images/event-logos/buzzer.jpg" class="logo"><div class="hov-con"><div class="text">Buzzer</div></div>
 				<div class="modal" id="myModal-02">
 					<div class="modal-content">
 						<p class="tagline">“Life is a big canvas throw all the paint you can on it.”</p>
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 			
-			<div class="box" id="hv-4"><img src="images/event-logos/chalchitra.jpg" class="logo"><div class="hov-con"><div class="text">LOGO</div></div>
+			<div class="box" id="hv-4"><img src="images/event-logos/chalchitra.jpg" class="logo"><div class="hov-con"><div class="text">Movie Making</div></div>
 				<div class="modal" id="myModal-04">
 					<div class="modal-content">
 						<p class="tagline">“Programming isn’t about what you know; it’s about what you can figure out”</p>
@@ -117,7 +117,7 @@
 			</div>
 
 
-			<div class="box" id="hv-5"><img src="images/event-logos/clickhe.png" class="logo"><div class="hov-con"><div class="text">Junior Presentation</div></div>
+			<div class="box" id="hv-5"><img src="images/2021/events/photo.png" class="logo"><div class="hov-con"><div class="text">Photography</div></div>
 				<div class="modal" id="myModal-05">
 					<div class="modal-content">
 						<p class="tagline">“Ctrl + M…. and here we go!”</p>
@@ -130,7 +130,7 @@
 				</div>
 			</div>
 
-			<div class="box" id="hv-6"><img src="images/event-logos/evolutioners.jpg" class="logo"><div class="hov-con"><div class="text">Sway</div></div>
+			<div class="box" id="hv-6"><img src="images/event-logos/gd.png" class="logo"><div class="hov-con"><div class="text">Group Discussion</div></div>
 				<div class="modal" id="myModal-06">
 					<div class="modal-content">
 						<p class="tagline">“Share what Animates you”</p>
@@ -143,7 +143,7 @@
 				</div>
 			</div>
 		
-			<div class="box" id="hv-8"><img src="images/event-logos/opus.png" class="logo"><div class="hov-con"><div class="text">Photography</div></div>
+			<div class="box" id="hv-8"><img src="images/2021/events/opus.png" class="logo"><div class="hov-con"><div class="text">Web Development</div></div>
 				<div class="modal" id="myModal-08">
 					<div class="modal-content">
 						<p class="tagline">“Pics or it didn’t happen”</p>
@@ -158,7 +158,7 @@
 				</div>
 			</div>
 		
-			<div class="box" id="hv-10"><img src="images/event-logos/prezipitate.png" class="logo"><div class="hov-con"><div class="text">Web Development</div></div>
+			<div class="box" id="hv-10"><img src="images/2021/events/news.png" class="logo"><div class="hov-con"><div class="text">Newsletter Making</div></div>
 				<div class="modal" id="myModal-10">
 					<div class="modal-content">
 						<p class="tagline">“What separates design from art is that design is meant to be… functional.”</p>
@@ -175,7 +175,7 @@
 			</div>
 		
 				
-			<div class="box" id="hv-12"><img src="images/event-logos/sway.jpg" class="logo"><div class="hov-con"><div class="text">Movie Making</div></div>
+			<div class="box" id="hv-12"><img src="images/event-logos/sway.jpg" class="logo"><div class="hov-con"><div class="text">Microsoft Sway</div></div>
 				<div class="modal" id="myModal-12">
 					<div class="modal-content">
 						<p class="tagline">“Everybody is special. But not today, because today, we give you the story.”</p>
