--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<tr>
 		<td><div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
 		<div class = "mem-name">vikasgoudar@gmail.com</div></div></a><span class = "mem-name-end">Vikas Goudar</span><br><span class="mem-evnt">Logic Gate</span></div></div></td>
-		<td><div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
-		<div class = "mem-name">vikasgoudar@gmail.com</div></div></a><span class = "mem-name-end">Riya Malhotra</span><br><span class="mem-evnt">Logic Gate</span></div></td>
+		<td><div class="tbox"><img src="images/2021/membs/riya.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">riyamalhotra1710@gmail.com</div></div></a><span class = "mem-name-end">Riya Malhotra</span><br><span class="mem-evnt">Logic Gate</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Anuvrat Arya</span><br><span class="mem-evnt">Clic(k)he</span></div></td></tr>
@@ -300,6 +300,11 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 		<td><div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div></td></tr>
+
+		<tr><td></td>
+		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">koyaldas@gmail.com</div></div><span class = "mem-name-end">Koyal Das</span><br><span class="mem-evnt">Leviosway</span></div>
+		</td><td></td></tr>
 
 	</table>
 	
