mems im not counting anymore

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 		<a href="https://www.youtube.com/thetword" target="_blank">
 		<tr>
-		<td><div class="tbox"><img src="images/2021/membs/vikas.png" class="memb"><div class="mem">
+		<td><div class="tbox"><img src="images/2021/membs/vikas.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">vikasgoudar@gmail.com</div></div></a><span class = "mem-name-end">Vikas Goudar</span><br><span class="mem-evnt">Logic Gate</span></div></div></td>
 		<td><div class="tbox"><img src="images/2021/membs/riya.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">riyamalhotra1710@gmail.com</div></div></a><span class = "mem-name-end">Riya Malhotra</span><br><span class="mem-evnt">Logic Gate</span></div></td>
