--- a/index.html
+++ b/index.html
@@ -217,12 +217,13 @@ background:-o-linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);
 background:-moz-linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);
 background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color: white">Presidential Board</h1>
 <br><br>
+  	<span class = "designation" style="color;font-family: 'Raleway';font-weight: 400">President</span><br>
   <div class="teambox" >
 
 
-     <div class="tbox" style="padding-top: 20px">
+     <div class="tbox">
      	
-         <span class = "designation" style="color;font-family: 'Raleway';font-weight: 400">President</span><br><br>
+         
          <a href="https://www.instagram.com/aviral_0107/" target="_blank">
          <img src="images/2021/membs/AVIRAL2.jpg" class="memb"><div class="mem">
      <div class = "mem-name">aviralgupta010704@gmail.com</div></div></a><span class = "mem-name-end">Aviral Gupta</span><br><span class="mem-evnt">C1UE5</span></div>
@@ -231,18 +232,24 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
   </div>
 
-  <div class="teambox" >
 
-  <div class="tbox"  style="padding-top: 1px"> <span class = "designation" style="font-family: 'Raleway';font-weight: 400">  Vice-President</span><br><br>
+  	
+	<br>
+  <div class="teambox" >
+  	<div class = 'teambox2'>
+  		<span class = "designation" style="font-family: 'Raleway';font-weight: 400;">Vice-President</span>
+  <div class="tbox">
+
 	<a href="https://www.instagram.com/_atharva_yadav/" target="_blank">
 	<img src="images/2021/membs/ATHARVA2.jpg" class="memb"><div class="mem">
 <div class = "mem-name">yadav.atharva99@gmail.com
-</div></div></a><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">C1ue5</span></div>
-
-<div class="tbox" style="padding-top: 1px"> <span class = "designation" style="font-family: 'Raleway';font-weight: 350"> Deputy VP</span><br><br>
+</div></div></a><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">C1ue5<br></span></div></div>
+<div class = 'teambox2' style="margin-left: 100px;">
+	<span class = "designation" style="font-family: 'Raleway';font-weight: 350;margin-left: 12%;">Deputy VP</span> 
+<div class="tbox" style="margin-left: 5%;"> 
 	<a href="https://www.instagram.com/officialkidrah/" target="_blank"><img src="images/2021/membs/hardik.jpg" class="memb"><div class="mem">
 <div class = "mem-name">hardikkohli7@gmail.com</div></div></a><span class = "mem-name-end">Hardik Kohli</span><br><span class="mem-evnt">Opus</span></div>
-  </div>
+  </div></div>
   <br><br>
   <h1 style="font-family: 'Raleway';font-weight: 800;font-size: 28px;padding-top: 30px;padding-bottom: 30px;background:-webkit-linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);
 background:-o-linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);
@@ -251,7 +258,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 <br><br>
 
 	<div class="teambox" align = 'center'>
-		<table id = "memberss">
+		<table id = "memberss" align="center">
 
 		<a href="https://www.youtube.com/thetword" target="_blank">
 		<tr>
