mems no point of countinh

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<td><a class="nav-item smoothscroll" href="#dates">IMPORTANT DATES</a></td>
 		<td><a class="nav-item smoothscroll" href="#team">TEAM</a></td>
 	  <td><a class="nav-item smoothscroll" href="#schedule">SCHEDULE</a></td>
-		<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR TEACHERS</td>
+		<td><a class="nav-item smoothscroll" href="teachers.html" target="_blank">OUR MENTORS</td>
 		<td><a class="nav-item smoothscroll" href="#contact">CONTACT</a></td>
 		<td><a class="nav-item" href="https://goo.gl/b1TKhd" target="_blank">REGISTER</a></td>
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
@@ -243,7 +243,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 	<a href="https://www.instagram.com/_atharva_yadav/" target="_blank">
 	<img src="images/2021/membs/ATHARVA2.jpg" class="memb"><div class="mem">
 <div class = "mem-name">yadav.atharva99@gmail.com
-</div></div></a><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">C1ue5<br></span></div></div>
+</div></div></a><span class = "mem-name-end">Atharva Yadav</span><br><span class="mem-evnt">C1ue5</span></div></div>
 <div class = 'teambox2' style="margin-left: 100px;">
 	<span class = "designation" style="font-family: 'Raleway';font-weight: 350;margin-left: 12%;">Deputy VP</span> 
 <div class="tbox" style="margin-left: 5%;"> 
@@ -269,8 +269,8 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 		<td><div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Anuvrat Arya</span><br><span class="mem-evnt">Clic(k)he</span></div></td></tr>
-		<tr><td><div class="tbox"><img src="images/2021/membs/anuvrat.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">anuvrat.arya2004@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">Clic(k)he</span></td>
+		<tr><td><div class="tbox"><img src="images/2021/membs/mansha.jpeg" class="memb"><div class="mem">
+		<div class = "mem-name">mansharapria@gmail.com</div></div><span class = "mem-name-end">Mansha Rapria</span><br><span class="mem-evnt">Clic(k)he</span></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/vaibhavy.png" class="memb"><div class="mem">
 		<div class = "mem-name">vaibhavydarshan08@gmail.com</div></div><span class = "mem-name-end">Vaibhavy Darshan</span><br><span class="mem-evnt">Chalchitra</span></div></td>
