--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Akshat Grover</span><br><span class="mem-evnt">Leviosway</span></div></td></tr>
 
-		<tr><td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<tr><td><div class="tbox"><img src="images/2021/membs/manchit.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">manchitrachit2017@gmail.com</div></div><span class = "mem-name-end">Manchit Vaid</span><br><span class="mem-evnt">Fun-O-Tastic</span></div></td>
 		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Harsh Trivedi</span><br><span class="mem-evnt">Fun-O-Tastic</span></div></td>
