Update #events in index.html

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <div class="second-big" id="about">
 	<div class="img-info"><img src="images/Laptop_Graphic.png" class="img-info-real"></div>
 	<div class="info"><div class="container"><span class = "heading">About Cyber Buzz</span><br><br><br>
-		<span class="info-desc">CyberBuzz is the prestigious tech symposium hosted annually by Amity International School Sector 43, Gurugram. From 4 events to a dozen this event has grown to be a learning experience for techies across Delhi NCR, enhancing their creativity in the field.<br>It is not everyday that Cyber enthusiasts get a Call To Arms. Cyber Buzz 2019 will not be just a test of knowledge, but also of skills in an Open Battlefield.<br>With 14 events covering the wide domain of computers and technology, CyberBuzz XVI will be truly test of the capability and the tech quotient of the participants.</div>
-	</span>
+		<p class="info-desc" align="justify">CyberBuzz is the prestigious tech symposium hosted annually by Amity International School Sector 43, Gurugram. From 4 events to a dozen this event has grown to be a learning experience for tech savvy students across Delhi NCR, enhancing their creativity in the field.<br>It is not everyday that Cyber enthusiasts get a Call To Arms. Cyber Buzz 2021 will not be just a test of knowledge, but also of skills in an Open Battlefield. With 13 events covering the wide domain of computers and technology, CyberBuzz XVII will truly be a test of the capability and tech quotient of the participants.</div>
+	</p>
 	</div>
 </div>
 
@@ -117,7 +117,7 @@
 			</div>
 
 
-			<div class="box" id="hv-5"><img src="images/2021/events/photo.png" class="logo"><div class="hov-con"><div class="text">Photography</div></div>
+			<div class="box" id="hv-5"><img src="images/2021/events/clickhe.png" class="logo"><div class="hov-con"><div class="text">Photography</div></div>
 				<div class="modal" id="myModal-05">
 					<div class="modal-content">
 						<p class="tagline">“Ctrl + M…. and here we go!”</p>
@@ -191,7 +191,86 @@
 					</div>
 				</div>
 			</div>
-		
+
+			<div class="box" id="hv-10"><img src="images/2021/events/clue5.png" class="logo"><div class="hov-con"><div class="text">Surprise Event</div></div>
+				<div class="modal" id="myModal-10">
+					<div class="modal-content">
+						<p class="tagline">“What separates design from art is that design is meant to be… functional.”</p>
+						<p class="evnt-info">Upload the entry on Google Drive/Drop box and email the link to sjoshi@aisg43.amity.edu. Only selected teams will battle out for prizes. Besides the originality and appeal of the design, functionality and creativity will be fetching points.<br>
+							<b>And remember, your &lt;html&gt; code should be spic n’ &lt;span&gt; ;)</b><br>
+							<b>Languages:</b>*HTML, CSS, Javascript, Jquery<br>
+							<b>Software provided:</b>Sublime Text, Adobe Photoshop<br>
+							*Participants are advised to refrain from using templates and copying code.<br>
+							Eligibility – IX-X<br>
+						</p>
+						<p class="team-eligibility">No of Teams/School – 1<br>No. of Participants/Team – 1</p>
+						</div>
+				</div>
+			</div>
+
+			<div class="box" id="hv-10"><img src="images/2021/events/spark.jpeg" class="logo"><div class="hov-con"><div class="text">Adobe Spark</div></div>
+				<div class="modal" id="myModal-10">
+					<div class="modal-content">
+						<p class="tagline">“What separates design from art is that design is meant to be… functional.”</p>
+						<p class="evnt-info">Upload the entry on Google Drive/Drop box and email the link to sjoshi@aisg43.amity.edu. Only selected teams will battle out for prizes. Besides the originality and appeal of the design, functionality and creativity will be fetching points.<br>
+							<b>And remember, your &lt;html&gt; code should be spic n’ &lt;span&gt; ;)</b><br>
+							<b>Languages:</b>*HTML, CSS, Javascript, Jquery<br>
+							<b>Software provided:</b>Sublime Text, Adobe Photoshop<br>
+							*Participants are advised to refrain from using templates and copying code.<br>
+							Eligibility – IX-X<br>
+						</p>
+						<p class="team-eligibility">No of Teams/School – 1<br>No. of Participants/Team – 1</p>
+						</div>
+				</div>
+			</div>
+
+			<div class="box" id="hv-10"><img src="images/2021/events/funotastic.png" class="logo"><div class="hov-con"><div class="text">Digital Role Play</div></div>
+				<div class="modal" id="myModal-10">
+					<div class="modal-content">
+						<p class="tagline">“What separates design from art is that design is meant to be… functional.”</p>
+						<p class="evnt-info">Upload the entry on Google Drive/Drop box and email the link to sjoshi@aisg43.amity.edu. Only selected teams will battle out for prizes. Besides the originality and appeal of the design, functionality and creativity will be fetching points.<br>
+							<b>And remember, your &lt;html&gt; code should be spic n’ &lt;span&gt; ;)</b><br>
+							<b>Languages:</b>*HTML, CSS, Javascript, Jquery<br>
+							<b>Software provided:</b>Sublime Text, Adobe Photoshop<br>
+							*Participants are advised to refrain from using templates and copying code.<br>
+							Eligibility – IX-X<br>
+						</p>
+						<p class="team-eligibility">No of Teams/School – 1<br>No. of Participants/Team – 1</p>
+						</div>
+				</div>
+			</div>
+
+			<div class="box" id="hv-10"><img src="images/2021/events/roleplay.png" class="logo"><div class="hov-con"><div class="text">Fancy Dress</div></div>
+				<div class="modal" id="myModal-10">
+					<div class="modal-content">
+						<p class="tagline">“What separates design from art is that design is meant to be… functional.”</p>
+						<p class="evnt-info">Upload the entry on Google Drive/Drop box and email the link to sjoshi@aisg43.amity.edu. Only selected teams will battle out for prizes. Besides the originality and appeal of the design, functionality and creativity will be fetching points.<br>
+							<b>And remember, your &lt;html&gt; code should be spic n’ &lt;span&gt; ;)</b><br>
+							<b>Languages:</b>*HTML, CSS, Javascript, Jquery<br>
+							<b>Software provided:</b>Sublime Text, Adobe Photoshop<br>
+							*Participants are advised to refrain from using templates and copying code.<br>
+							Eligibility – IX-X<br>
+						</p>
+						<p class="team-eligibility">No of Teams/School – 1<br>No. of Participants/Team – 1</p>
+						</div>
+				</div>
+			</div>
+			
+			<div class="box" id="hv-10"><img src="images/2021/events/roleplay.png" class="logo"><div class="hov-con"><div class="text">Paint 3D</div></div>
+				<div class="modal" id="myModal-10">
+					<div class="modal-content">
+						<p class="tagline">“What separates design from art is that design is meant to be… functional.”</p>
+						<p class="evnt-info">Upload the entry on Google Drive/Drop box and email the link to sjoshi@aisg43.amity.edu. Only selected teams will battle out for prizes. Besides the originality and appeal of the design, functionality and creativity will be fetching points.<br>
+							<b>And remember, your &lt;html&gt; code should be spic n’ &lt;span&gt; ;)</b><br>
+							<b>Languages:</b>*HTML, CSS, Javascript, Jquery<br>
+							<b>Software provided:</b>Sublime Text, Adobe Photoshop<br>
+							*Participants are advised to refrain from using templates and copying code.<br>
+							Eligibility – IX-X<br>
+						</p>
+						<p class="team-eligibility">No of Teams/School – 1<br>No. of Participants/Team – 1</p>
+						</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
@@ -260,7 +339,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 	<div class="teambox" align = 'center'>
 		<table id = "memberss" align="center">
 
-		<a href="https://www.youtube.com/thetword" target="_blank">
+		<a target="_blank">
 		<tr>
 		<td><div class="tbox"><img src="images/2021/membs/vikas.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">vikasgoudar@gmail.com</div></div></a><span class = "mem-name-end">Vikas Goudar</span><br><span class="mem-evnt">Logic Gate</span></div></div></td>
@@ -314,11 +393,6 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		</td><td></td></tr>
 
 	</table>
-	
-
-	
-
-
 	</div>
 
 </div>
@@ -338,7 +412,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 	</table></div>
 
 	<div class="links">Email : amitycyberbuzz@gmail.com<br> Facebook: <a class = "link-fb" href="https://fb.com/amitycyberbuzz">fb.com/amitycyberbuzz</a><br>
-		Official Invite: <a class="link-fb" href="http://bit.ly/cbinvitation">CyberBuzz2019</a>
+		Official Invite: <a class="link-fb" href="">CyberBuzz2021</a>
 	</div>
 	<div class="last-logo"><img src="images/logo.png" class="last-logo-img"></div>
 </div>
