--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 
 		<tr><td><div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Siddharth Kishore</span><br><span class="mem-evnt">Buzzer</span></div></td>
-		<td><div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
+		<td><div class="tbox"><img src="images/2021/membs/nishant.png" class="memb"><div class="mem">
 		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
