--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<div class = "mem-name">akanksha.kumari2405@gmail.com</div></div><span class = "mem-name-end">Akanksha Kumari</span><br><span class="mem-evnt">Chalchitra</span></div></td></tr>
 
 		<tr><td><div class="tbox"><img src="images/2021/membs/sid.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Siddharth Kishore</span><br><span class="mem-evnt">Buzzer</span></div></td>
+		<div class = "mem-name">siddharth.kishore09@gmail.com</div></div><span class = "mem-name-end">Siddharth Kishore</span><br><span class="mem-evnt">Buzzer</span></div></td>
 		<td><div class="tbox"><img src="images/2021/membs/nishant.png" class="memb"><div class="mem">
-		<div class = "mem-name">siddharth.kishore09@gmail.comm</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer</span></div></td>
+		<div class = "mem-name">thecardboardgaming@gmail.com</div></div><span class = "mem-name-end">Nishant Verma</span><br><span class="mem-evnt">Buzzer</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/mihir.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">kr.mihir2001@gmail.com</div></div><span class = "mem-name-end">Mihir Kumar</span><br><span class="mem-evnt">Trial by Combat</span></div></td></tr>
