--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
 		<td><a class="nav-item right" style= " margin-left: 30px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
+		<td><a class="nav-item right" style= " margin-left: -10px;" href="https://www.instagram.com/cyberbuzz2021/" target="_blank"><img src="images/2021/insta.png" style="height: 28px;"></a></td>
 		</tr></tbody></table>
 		</div>
 	</div>
