--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 <div class="footer" id="contact">
 	<div class="footer-table"><table>
 		<tbody>
-			<tr><td class="ftr-data">Venue:</td><td class="ftr-data">Amity International School<br>Power Grid Complex<br>Sector-43, Gurugram<br></td></tr>
-			<tr><td class="ftr-data">Timings:</td><td class="ftr-data">8AM to 3PM</td></tr>
+			<tr><td class="ftr-data">Venue:</td><td class="ftr-data">Online<br></td></tr>
+			<!--<tr><td class="ftr-data">Timings:</td><td class="ftr-data">8AM to 3PM</td></tr>-->
 		</tbody>
 	</table></div>
 
