--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div></td></tr>
 
 		<tr><td></td>
-		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
+		<td><div class="tbox"><img src="images/2021/membs/akshat.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">groverakshat2007@gmail.com</div></div><span class = "mem-name-end">Akshat Grover</span><br><span class="mem-evnt">Flick</span></div>
 		</td><td></td></tr>
 
@@ -415,7 +415,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 	<div class="links">Email : amitycyberbuzz@gmail.com<br> Facebook: <a class = "link-fb" href="https://fb.com/amitycyberbuzz">fb.com/amitycyberbuzz</a><br>
 		Official Invite: <a class="link-fb" href="">CyberBuzz2021</a>
 	</div>
-	<div class="last-logo"><img src="images/logo.png" class="last-logo-img"></div>
+	<div class="last-logo"><img src="images/instagram-logo.png" class="last-logo-img"></div>
 </div>
 
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
