--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!--		<td><a class="nav-item" href="/prelims" target="_blank">PRELIMS RESULTS</a></td>  -->
 		<!--<td><a class="nav-item" href="prelims.html" target="_blank">PRELIM RESULTS</a></td>-->
 		<td><a class="nav-item right" style= " margin-left: 30px;" href="https://fb.com/amitycyberbuzz" target="_blank"><img src="images/fb.png" style="height: 20px;"></a></td>
-		<td><a class="nav-item right" style= " margin-left: -10px;" href="https://www.instagram.com/cyberbuzz2021/" target="_blank"><img src="images/2021/insta.png" style="height: 28px;"></a></td>
+		<td><a class="nav-item right" style= " margin-left: -10px;" href="https://www.instagram.com/cyberbuzz2021/" target="_blank"><img src="images/instagram-logo.png" style="height: 28px;"></a></td>
 		</tr></tbody></table>
 		</div>
 	</div>
@@ -415,7 +415,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 	<div class="links">Email : amitycyberbuzz@gmail.com<br> Facebook: <a class = "link-fb" href="https://fb.com/amitycyberbuzz">fb.com/amitycyberbuzz</a><br>
 		Official Invite: <a class="link-fb" href="">CyberBuzz2021</a>
 	</div>
-	<div class="last-logo"><img src="images/instagram-logo.png" class="last-logo-img"></div>
+	<div class="last-logo"><img src="images/logo.png" class="last-logo-img"></div>
 </div>
 
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
