--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<div class = "mem-name">harshitgrover007@gmail.com</div></div><span class = "mem-name-end">Harshit Grover</span><br><span class="mem-evnt">Trial by Combat</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Aryan Jain</span><br><span class="mem-evnt">Leviosway</span></div></td>
+		<div class = "mem-name">aryan.jain4@ais.amity.edu</div></div><span class = "mem-name-end">Aryan Jain</span><br><span class="mem-evnt">Flick</span></div></td>
 		<td><div class="tbox"><img src="images/2021/membs/koyal.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">koyaldas@gmail.com</div></div><span class = "mem-name-end">Koyal Das</span><br><span class="mem-evnt">Leviosway</span></div></td></tr>
 
 		<tr><td><div class="tbox"><img src="images/2021/membs/manchit.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">manchitrachit2017@gmail.com</div></div><span class = "mem-name-end">Manchit Vaid</span><br><span class="mem-evnt">Fun-O-Tastic</span></div></td>
-		<td><div class="tbox"><img src="images/2021/membs/aryan.jpg" class="memb"><div class="mem">
+		<td><div class="tbox"><img src="images/2021/membs/harsh.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">harsh.trivedi3103@gmail.com</div></div><span class = "mem-name-end">Harsh Trivedi</span><br><span class="mem-evnt">Fun-O-Tastic</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/yesha.png" class="memb"><div class="mem">
@@ -382,7 +382,7 @@ background:linear-gradient(90deg, rgb(52, 73, 94) 0%, rgb(73, 75, 73) 80%);color
 		<tr><td><div class="tbox"><img src="images/2021/membs/yana.jpeg" class="memb"><div class="mem">
 		<div class = "mem-name">bhanotyana@gmail.com</div></div><span class = "mem-name-end">Yana Bhanot</span><br><span class="mem-evnt">E-Brochure</span></div></td>
 		<td><div class="tbox"><img src="images/2021/membs/suzan.jpg" class="memb"><div class="mem">
-		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">E-Brochure</span></div></td>
+		<div class = "mem-name">suzan.ghorai@ais.amity.edu</div></div><span class = "mem-name-end">Suzan Ghorai</span><br><span class="mem-evnt">Spark'IT Up</span></div></td>
 
 		<td><div class="tbox"><img src="images/2021/membs/prisha.jpg" class="memb"><div class="mem">
 		<div class = "mem-name">prishap403@gmail.com</div></div><span class = "mem-name-end">Prisha Prasad</span><br><span class="mem-evnt">Opus</span></div></td></tr>
