--- a/teachers.html
+++ b/teachers.html
@@ -27,15 +27,15 @@
 
 
 <div class="box">
-	<div class="b-item" align="center"><img src="images/teachers/savita.jpg" class="b-img"><span class="name">Mrs. Savita Yadav</span><br><span class="b-post">Cyber Buzz In-Charge</span></div>
-	<div class="b-item" align="center"><img src="images/teachers/suman.jpg" class="b-img"><br><span class="name">Mrs. Suman Joshi</span><br><span class="b-post">Cyber Buzz In-Charge</span></div>
-	<div class="b-item" align="center"><img src="images/teachers/monica.jpg" class="b-img"><span class="name">Mrs. Monika Pasricha</span><br><span class="b-post">Cyber Buzz In-Charge</span></div>
+	<div class="b-item" align="center"><img src="images/teachers/suman.jpg" class="b-img"><br><span class="name">Mrs. Suman Joshi</span><br><span class="b-post">Cyberbuzz In-Charge</span></div>
+	<div class="b-item" align="center"><img src="images/teachers/savita.jpg" class="b-img"><span class="name">Mrs. Savita Yadav</span><br><span class="b-post"></span></div>
+	<div class="b-item" align="center"><img src="images/teachers/monica.jpg" class="b-img"><span class="name">Mrs. Monika Pasricha</span><br><span class="b-post"></span></div>
 </div>
 
 <div class="bb-box">
-	<div class="bb-item" align="center"><img src="images/teachers/manju.jpg" class="bb-img"><span class="bb-name">Mrs. Manju Munjal</span><br><span class="bb-post">Cyber Buzz In-Charge</span></div>
-	<div class="bb-item" align="center"><img src="images/teachers/pramod.jpg" class="bb-img"><br><span class="bb-name">Mr. Pramod Bhatt</span><br><span class="bb-post">Cyber Buzz In-Charge</span></div>
-	<div class="bb-item" align="center"><img src="images/teachers/sandeep.jpg" class="bb-img"><span class="bb-name">Mr. Sandeep Kumar</span><br><span class="bb-post">Cyber Buzz In-Charge</span></div>
+	<div class="bb-item" align="center"><img src="images/teachers/manju.jpg" class="bb-img"><span class="bb-name">Mrs. Manju Munjal</span><br><span class="bb-post"></span></div>
+	<div class="bb-item" align="center"><img src="images/teachers/pramod.jpg" class="bb-img"><br><span class="bb-name">Mr. Pramod Bhatt</span><br><span class="bb-post"></span></div>
+	<div class="bb-item" align="center"><img src="images/teachers/sandeep.jpg" class="bb-img"><span class="bb-name">Mr. Sandeep Kumar</span><br><span class="bb-post"></span></div>
 </div>
 
 
